--- a/src/index.html
+++ b/src/index.html
@@ -16,30 +16,30 @@
 
 	<body>
 
-				<nav class="main-nav" id="nav">
-					<div class="container"></div>
-						<div class="nav-wrap">
+		<nav class="nav" id="nav">
+			<div class="container">
+				<div class="nav-wrap">
 
-							<div class="main-nav__icon">
-								<i class="fa fa-bars fa-2x"></i>
-							</div>
-				
-							<div class="main-nav__logo">
-							</div>
-				
-							<ul class="main-nav__menu">
-								<li><a href="#" class="main-nav__menu-link">Home</a></li>
-								<li><a href="#" class="main-nav__menu-link">About</a></li>
-								<li><a href="#" class="main-nav__menu-link">Blog</a></li>
-								<li><a href="#" class="main-nav__menu-link">Contact</a></li>
-								<li><button class="button">Book Now</button></li>
-							</ul>
+					<div class="nav__icon">
+						<i class="fa fa-bars fa-2x"></i>
+					</div>
+		
+					<div class="nav__logo">
+					</div>
+		
+					<ul class="nav__menu">
+						<li><a href="#" class="nav__menu-link">Home</a></li>
+						<li><a href="#" class="nav__menu-link">About</a></li>
+						<li><a href="#" class="nav__menu-link">Blog</a></li>
+						<li><a href="#" class="nav__menu-link">Contact</a></li>
+						<li><button class="button">Book Now</button></li>
+					</ul>
 
-						</div><!-- /.nav-wrap -->
-					</div><!-- /.container -->
-				</nav> <!-- /.nav -->
+				</div><!-- /.nav-wrap -->
+			</div><!-- /.container -->
+		</nav> <!-- /.nav -->
 
-		<main class="main">
+		<main class="main" id="main">
 			<div class="container">
 
 				<div class="main-block">
