--- a/src/index.html
+++ b/src/index.html
@@ -1,147 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<title>Mocco Group</title>
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Poppins:400,600" rel="stylesheet">
-		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
-		 crossorigin="anonymous">
-		<link rel="stylesheet" href="libs/reset.min.css">
-		<link rel="stylesheet" href="css/style.css">
+	<title>Mocco Group</title>
 
-	</head>
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:400,600|Poppins:400,600" rel="stylesheet">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+	 crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
+	<link rel="stylesheet" href="libs/reset.min.css">
+	<link rel="stylesheet" href="css/style.css">
 
-	<body>
+</head>
 
-		<nav class="nav" id="nav">
-			<div class="container">
-				<div class="nav-wrap">
+<body>
 
-					<div class="nav__icon">
-						<i class="fa fa-bars fa-2x"></i>
-					</div>
-		
-					<div class="nav__logo">
-					</div>
-		
-					<ul class="nav__menu">
-						<li><a href="#" class="nav__menu-link">Home</a></li>
-						<li><a href="#" class="nav__menu-link">About</a></li>
-						<li><a href="#" class="nav__menu-link">Blog</a></li>
-						<li><a href="#" class="nav__menu-link">Contact</a></li>
-						<li><button class="button">Book Now</button></li>
-					</ul>
+	<nav class="nav" id="nav">
+		<div class="container">
+			<div class="nav-wrap">
 
-				</div><!-- /.nav-wrap -->
-			</div><!-- /.container -->
-		</nav> <!-- /.nav -->
+				<div class="nav__icon">
+					<i class="fa fa-bars fa-2x"></i>
+				</div>
 
-		<main class="main" id="main">
-			<div class="container">
+				<div class="nav__logo">
+				</div>
 
-				<div class="main-block">
+				<ul class="nav__menu">
+					<li><a href="#" class="nav__menu-link">Home</a></li>
+					<li><a href="#" class="nav__menu-link">About</a></li>
+					<li><a href="#" class="nav__menu-link">Blog</a></li>
+					<li><a href="#" class="nav__menu-link">Contact</a></li>
+					<li><button class="button">Book Now</button></li>
+				</ul>
+
+			</div><!-- /.nav-wrap -->
+		</div><!-- /.container -->
+	</nav> <!-- /.nav -->
+
+	<main class="main" id="main">
+		<div class="container">
+
+			<div class="main-block">
+				<div class="section-title">
+					<h1>
+						World Best Travell Agency
+					</h1>
+				</div><!-- /.section-title -->
+				<div class="section-subtitle">
+					Save Upto 40% For Upcoming Summer
+					<p>
+						Starts From $250 Only ( 2 Days, 3 Nights)
+					</p>
+				</div><!-- /.section-subtitle -->
+				<button class="button">Explore Now</button><!-- /.button -->
+			</div><!-- /.main-block -->
+		</div><!-- /.container -->
+	</main><!-- /.main -->
+
+	<div class="features">
+		<div class="container">
+			<div class="features-wrap">
+
+				<div class="features-main">
 					<div class="section-title">
-						<h1>
-							World Best Travell Agency
-						</h1>
+						Our Agency
 					</div><!-- /.section-title -->
 					<div class="section-subtitle">
-						Save Upto 40% For Upcoming Summer
-						<p>
-							Starts From $250 Only ( 2 Days, 3 Nights)
-						</p>
+						Feature Trip
 					</div><!-- /.section-subtitle -->
-					<button class="button">Explore Now</button><!-- /.button -->
-				</div><!-- /.main-block -->
-			</div><!-- /.container -->
-		</main><!-- /.main -->
-		
-		<div class="features">
-			<div class="container">
-				<div class="features-wrap">
+					<div class="section-descr">
+						Accusamus et iusto odio bolo dignissimos ducimus qui lawer blandits praesentium Accus amus et iusto odio bolo atque volup
+						tatum delenite.
+					</div><!-- /.section-descr -->
+					<button class="button features-main__button">Book Now</button><!-- /.button features-main__button -->
+				</div><!-- /.features-main -->
 
-					<div class="features-main">
-						<div class="section-title">
-							Our Agency
-						</div><!-- /.section-title -->
-						<div class="section-subtitle">
-							Feature Trip
-						</div><!-- /.section-subtitle -->
-						<div class="section-descr">
-							Accusamus et iusto odio bolo dignissimos ducimus qui lawer 
-							blandits praesentium Accus amus et iusto odio bolo atque volup
-							tatum delenite.
-						</div><!-- /.section-descr -->
-						<button class="button features-main__button">Book Now</button><!-- /.button features-main__button -->
-					</div><!-- /.features-main -->
+				<div class="features-block features-block_first">
+					<div class="features-block__title">
+						London, England
+					</div><!-- /.features-block__header -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.features-block -->
 
-					<div class="features-block features-block_first">
-						<div class="features-block__title">
-							London, England
-						</div><!-- /.features-block__header -->
-						<div class="features-block__wrap">
-							<div class="features-block__rating">
-								Rating :
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star-half-alt features-block__rating-star"></i>
-							</div><!-- /.features-block__rating -->
-							<button class="features-block__button button">
-								Discover
-							</button><!-- /.features-block__button -->
-						</div><!-- /.features-block__wrap -->
-					</div><!-- /.features-block -->
+				<div class="features-block features-block_second">
+					<div class="features-block__title">
+						Dubai, UAE
+					</div><!-- /.features-block__header -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.features-block -->
 
-					<div class="features-block features-block_second">
-						<div class="features-block__title">
-							Dubai, UAE
-						</div><!-- /.features-block__header -->
-						<div class="features-block__wrap">
-							<div class="features-block__rating">
-								Rating :
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-							</div><!-- /.features-block__rating -->
-							<button class="features-block__button button">
-								Discover
-							</button><!-- /.features-block__button -->
-						</div><!-- /.features-block__wrap -->
-					</div><!-- /.features-block -->
+				<div class="features-block features-block_third">
+					<div class="features-block__title">
+						Bern, Switzerland
+					</div><!-- /.features-block__header -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.features-block -->
 
-					<div class="features-block features-block_third">
-						<div class="features-block__title">
-							Bern, Switzerland
-						</div><!-- /.features-block__header -->
-						<div class="features-block__wrap">
-							<div class="features-block__rating">
-								Rating :
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star features-block__rating-star"></i>
-								<i class="fas fa-star-half-alt features-block__rating-star"></i>
-							</div><!-- /.features-block__rating -->
-							<button class="features-block__button button">
-								Discover
-							</button><!-- /.features-block__button -->
-						</div><!-- /.features-block__wrap -->
-					</div><!-- /.features-block -->
+			</div><!-- /.features-wrap -->
+		</div><!-- /.contaner -->
+	</div><!-- /.features -->
 
-				</div><!-- /.features-wrap -->
-			</div><!-- /.contaner -->
-		</div><!-- /.features -->
-		
-		
-		<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-		<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
-		<script src="js/script.js"></script>
-	</body>
+	<div class="convenience">
+		<div class="container">
+			<div class="section-title">
+				Provide Packege
+			</div><!-- /.section-title -->
+			<div class="section-subtitle">
+				Convenience
+			</div><!-- /.section-subtitle -->
+
+			<div class="convenience-slider">
+
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-1.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Hotel Facilities
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of text
+						avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-2.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Tourist Guide
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of
+						text avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-3.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Air Ticket
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of text
+						avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-1.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Hotel Facilities
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of text
+						avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-2.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Tourist Guide
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of text
+						avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+
+				<div class="convenience-slider__block">
+					<div class="convenience-slider__block-icon"><img src="img/convenience/icon-3.png" alt="#"></div><!-- /.convenience-slider__block-icon -->
+					<div class="section-subtitle">
+						Air Ticket
+					</div><!-- /.section-title -->
+					<div class="section-descr">
+						You are going to use a passage of Lorem Ipsum, you need to be there isn't anything embarrassing hidden in the middle of text
+						avaible.
+					</div><!-- /.section-descr -->
+				</div><!-- /.convenience-slider__block -->
+
+			</div><!-- /.convenience-slider -->
+		</div><!-- /.container -->
+	</div><!-- /.convenience -->
+
+	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+	 crossorigin="anonymous"></script>
+	<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
+	<script src="js/script.js"></script>
+</body>
+
 </html>
