--- a/src/index.html
+++ b/src/index.html
@@ -220,6 +220,56 @@
 		</div><!-- /.container -->
 	</div><!-- /.convenience -->
 
+	<div class="choice">
+		<div class="container">
+			<div class="section-title">
+				 We Take Best Care
+			</div><!-- /.section-title -->
+			<div class="section-subtitle">
+				 Why Choose Us?
+			</div><!-- /.section-subtitle -->
+			<div class="choice-wrap">
+
+				<div class="choice-block">
+					<div class="choice-block__title">
+						 Unlimited Room Available.
+					</div><!-- /.choice-block__title -->
+					<div class="section-descr">
+						 Accusamus et iusto odio bolo dignissimos ducimus qui lawer blandits
+						 praesentium Accus amus et iusto odio bol Accus amus et iusto odio bol.
+					</div><!-- /.section-descr -->
+				</div><!-- /.choice-block -->
+
+				<div class="choice-block">
+					<div class="choice-block__title">Air / Bus Ticket Provide By Us.</div><!-- /.choice-block__title -->
+					<div class="section-descr">
+						 Accusamus et iusto odio bolo dignissimos ducimus qui lawer blandits
+						 praesentium Accus amus et iusto odio bol Accus amus et iusto odio bol.
+					</div><!-- /.section-descr -->
+				</div><!-- /.choice-block -->
+
+				<div class="choice-block">
+					<div class="choice-block__title">
+						 Custome Packege Available.
+					</div><!-- /.choice-block__title -->
+					<div class="section-descr">
+						 Accusamus et iusto odio bolo dignissimos ducimus qui lawer blandits
+						 praesentium Accus amus et iusto odio bol Accus amus et iusto odio bol.
+					</div><!-- /.section-descr -->
+				</div><!-- /.choice-block -->
+
+				<div class="choice-block">
+					<div class="choice-block__title">
+						 100% Safe and Luxury Journey.
+					</div><!-- /.choice-block__title -->
+					<div class="section-descr">
+						Accusamus et iusto odio bolo dignissimos ducimus qui lawer blandits
+						praesentium Accus amus et iusto odio bol Accus amus et iusto odio bol.
+					</div><!-- /.section-descr -->
+				</div><!-- /.choice-block -->
+			</div><!-- /.choice-wrap -->
+		</div><!-- /.container -->
+	</div><!-- /.choice -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 	 crossorigin="anonymous"></script>
 	<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
