--- a/src/index.html
+++ b/src/index.html
@@ -270,6 +270,191 @@
 			</div><!-- /.choice-wrap -->
 		</div><!-- /.container -->
 	</div><!-- /.choice -->
+
+	<div class="packages">
+		<div class="container">
+			<div class="section-title">
+				Our Agency Provide
+			</div><!-- /.section-title -->
+			<div class="section-subtitle">
+				Top Tour Packege
+			</div><!-- /.section-subtitle -->
+			
+			<div class="packages-slider">
+			
+				<div class="packages-slider__block">
+					<div class="packages-slider__wrap">
+						<div class="packages-slider__block-first">
+							<div class="packages-slider__block-title">
+								Dubai, UAE
+							</div><!-- /.packages-slider__block-title -->
+							<div class="section-descr">
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+							</div><!-- /.section-descr -->
+						</div><!-- /.packages-slider__block-first -->
+						<div class="packages-slider__block-second">
+							<div class="packages-slider__block-price">
+								$350
+							</div><!-- /.packages-slider__block-price -->
+							<div class="packages-slider__block-time">
+								*2 Day 3 Night
+							</div><!-- /.packages-slider__block-time -->
+						</div><!-- /.packages-slider__block-second -->
+					</div><!-- /.packages-slider__wrap -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.packages-slider__block -->
+			
+				<div class="packages-slider__block">
+					<div class="packages-slider__wrap">
+						<div class="packages-slider__block-first">
+							<div class="packages-slider__block-title">
+								Dubai, UAE
+							</div><!-- /.packages-slider__block-title -->
+							<div class="section-descr">
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+							</div><!-- /.section-descr -->
+						</div><!-- /.packages-slider__block-first -->
+						<div class="packages-slider__block-second">
+							<div class="packages-slider__block-price">
+								$350
+							</div><!-- /.packages-slider__block-price -->
+							<div class="packages-slider__block-time">
+								*2 Day 3 Night
+							</div><!-- /.packages-slider__block-time -->
+						</div><!-- /.packages-slider__block-second -->
+					</div><!-- /.packages-slider__wrap -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.packages-slider__block -->
+			
+				<div class="packages-slider__block">
+					<div class="packages-slider__wrap">
+						<div class="packages-slider__block-first">
+							<div class="packages-slider__block-title">
+								Dubai, UAE
+							</div><!-- /.packages-slider__block-title -->
+							<div class="section-descr">
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+							</div><!-- /.section-descr -->
+						</div><!-- /.packages-slider__block-first -->
+						<div class="packages-slider__block-second">
+							<div class="packages-slider__block-price">
+								$350
+							</div><!-- /.packages-slider__block-price -->
+							<div class="packages-slider__block-time">
+								*2 Day 3 Night
+							</div><!-- /.packages-slider__block-time -->
+						</div><!-- /.packages-slider__block-second -->
+					</div><!-- /.packages-slider__wrap -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.packages-slider__block -->
+			
+				<div class="packages-slider__block">
+					<div class="packages-slider__wrap">
+						<div class="packages-slider__block-first">
+							<div class="packages-slider__block-title">
+								Dubai, UAE
+							</div><!-- /.packages-slider__block-title -->
+							<div class="section-descr">
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+							</div><!-- /.section-descr -->
+						</div><!-- /.packages-slider__block-first -->
+						<div class="packages-slider__block-second">
+							<div class="packages-slider__block-price">
+								$350
+							</div><!-- /.packages-slider__block-price -->
+							<div class="packages-slider__block-time">
+								*2 Day 3 Night
+							</div><!-- /.packages-slider__block-time -->
+						</div><!-- /.packages-slider__block-second -->
+					</div><!-- /.packages-slider__wrap -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.packages-slider__block -->
+			
+				<div class="packages-slider__block">
+					<div class="packages-slider__wrap">
+						<div class="packages-slider__block-first">
+							<div class="packages-slider__block-title">
+								Dubai, UAE
+							</div><!-- /.packages-slider__block-title -->
+							<div class="section-descr">
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+							</div><!-- /.section-descr -->
+						</div><!-- /.packages-slider__block-first -->
+						<div class="packages-slider__block-second">
+							<div class="packages-slider__block-price">
+								$350
+							</div><!-- /.packages-slider__block-price -->
+							<div class="packages-slider__block-time">
+								*2 Day 3 Night
+							</div><!-- /.packages-slider__block-time -->
+						</div><!-- /.packages-slider__block-second -->
+					</div><!-- /.packages-slider__wrap -->
+					<div class="features-block__wrap">
+						<div class="features-block__rating">
+							Rating :
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star features-block__rating-star"></i>
+							<i class="fas fa-star-half-alt features-block__rating-star"></i>
+						</div><!-- /.features-block__rating -->
+						<button class="features-block__button button">
+							Discover
+						</button><!-- /.features-block__button -->
+					</div><!-- /.features-block__wrap -->
+				</div><!-- /.packages-slider__block -->
+			
+			</div><!-- /.packages-slider -->
+		</div><!-- /.container -->
+	</div><!-- /.packages -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
 	 crossorigin="anonymous"></script>
 	<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
