--- a/src/index.html
+++ b/src/index.html
@@ -277,19 +277,19 @@
 				Our Agency Provide
 			</div><!-- /.section-title -->
 			<div class="section-subtitle">
-				Top Tour Packege
+				Top Tour Package
 			</div><!-- /.section-subtitle -->
 			
 			<div class="packages-slider">
 			
-				<div class="packages-slider__block">
+				<div class="packages-slider__block packages-slider__block_first">
 					<div class="packages-slider__wrap">
 						<div class="packages-slider__block-first">
 							<div class="packages-slider__block-title">
 								Dubai, UAE
 							</div><!-- /.packages-slider__block-title -->
 							<div class="section-descr">
-								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque.
 							</div><!-- /.section-descr -->
 						</div><!-- /.packages-slider__block-first -->
 						<div class="packages-slider__block-second">
@@ -297,7 +297,7 @@
 								$350
 							</div><!-- /.packages-slider__block-price -->
 							<div class="packages-slider__block-time">
-								*2 Day 3 Night
+								<span class="packages-slider__block-time_star">*</span>2 Day 3 Night
 							</div><!-- /.packages-slider__block-time -->
 						</div><!-- /.packages-slider__block-second -->
 					</div><!-- /.packages-slider__wrap -->
@@ -316,14 +316,14 @@
 					</div><!-- /.features-block__wrap -->
 				</div><!-- /.packages-slider__block -->
 			
-				<div class="packages-slider__block">
+				<div class="packages-slider__block packages-slider__block_second">
 					<div class="packages-slider__wrap">
 						<div class="packages-slider__block-first">
 							<div class="packages-slider__block-title">
 								Dubai, UAE
 							</div><!-- /.packages-slider__block-title -->
 							<div class="section-descr">
-								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque.
 							</div><!-- /.section-descr -->
 						</div><!-- /.packages-slider__block-first -->
 						<div class="packages-slider__block-second">
@@ -331,7 +331,7 @@
 								$350
 							</div><!-- /.packages-slider__block-price -->
 							<div class="packages-slider__block-time">
-								*2 Day 3 Night
+								<span class="packages-slider__block-time_star">*</span>2 Day 3 Night
 							</div><!-- /.packages-slider__block-time -->
 						</div><!-- /.packages-slider__block-second -->
 					</div><!-- /.packages-slider__wrap -->
@@ -350,14 +350,14 @@
 					</div><!-- /.features-block__wrap -->
 				</div><!-- /.packages-slider__block -->
 			
-				<div class="packages-slider__block">
+				<div class="packages-slider__block packages-slider__block_third">
 					<div class="packages-slider__wrap">
 						<div class="packages-slider__block-first">
 							<div class="packages-slider__block-title">
 								Dubai, UAE
 							</div><!-- /.packages-slider__block-title -->
 							<div class="section-descr">
-								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque.
 							</div><!-- /.section-descr -->
 						</div><!-- /.packages-slider__block-first -->
 						<div class="packages-slider__block-second">
@@ -365,7 +365,7 @@
 								$350
 							</div><!-- /.packages-slider__block-price -->
 							<div class="packages-slider__block-time">
-								*2 Day 3 Night
+								<span class="packages-slider__block-time_star">*</span>2 Day 3 Night
 							</div><!-- /.packages-slider__block-time -->
 						</div><!-- /.packages-slider__block-second -->
 					</div><!-- /.packages-slider__wrap -->
@@ -384,14 +384,14 @@
 					</div><!-- /.features-block__wrap -->
 				</div><!-- /.packages-slider__block -->
 			
-				<div class="packages-slider__block">
+				<div class="packages-slider__block packages-slider__block_fourth">
 					<div class="packages-slider__wrap">
 						<div class="packages-slider__block-first">
 							<div class="packages-slider__block-title">
 								Dubai, UAE
 							</div><!-- /.packages-slider__block-title -->
 							<div class="section-descr">
-								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque.
 							</div><!-- /.section-descr -->
 						</div><!-- /.packages-slider__block-first -->
 						<div class="packages-slider__block-second">
@@ -399,7 +399,7 @@
 								$350
 							</div><!-- /.packages-slider__block-price -->
 							<div class="packages-slider__block-time">
-								*2 Day 3 Night
+								<span class="packages-slider__block-time_star">*</span>2 Day 3 Night
 							</div><!-- /.packages-slider__block-time -->
 						</div><!-- /.packages-slider__block-second -->
 					</div><!-- /.packages-slider__wrap -->
@@ -418,14 +418,14 @@
 					</div><!-- /.features-block__wrap -->
 				</div><!-- /.packages-slider__block -->
 			
-				<div class="packages-slider__block">
+				<div class="packages-slider__block packages-slider__block_fifth">
 					<div class="packages-slider__wrap">
 						<div class="packages-slider__block-first">
 							<div class="packages-slider__block-title">
 								Dubai, UAE
 							</div><!-- /.packages-slider__block-title -->
 							<div class="section-descr">
-								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque. volup tatum delenite.
+								Accusamus et iustoAccusamus et iusto odio bolo odio bolo digti odio ball atque.
 							</div><!-- /.section-descr -->
 						</div><!-- /.packages-slider__block-first -->
 						<div class="packages-slider__block-second">
@@ -433,7 +433,7 @@
 								$350
 							</div><!-- /.packages-slider__block-price -->
 							<div class="packages-slider__block-time">
-								*2 Day 3 Night
+								<span class="packages-slider__block-time_star">*</span>2 Day 3 Night
 							</div><!-- /.packages-slider__block-time -->
 						</div><!-- /.packages-slider__block-second -->
 					</div><!-- /.packages-slider__wrap -->
