--- a/src/index.html
+++ b/src/index.html
@@ -453,6 +453,14 @@
 				</div><!-- /.packages-slider__block -->
 			
 			</div><!-- /.packages-slider -->
+
+			<div class="section-subtitle">
+				Custom Package
+			</div><!-- /.section-subtitle -->
+
+			<div class="packages-custom">
+				
+			</div><!-- /.packages-custom -->
 		</div><!-- /.container -->
 	</div><!-- /.packages -->
 	<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
