--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,6 @@
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
 	 crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
-	<link type="text/css" rel="stylesheet" href="http://gregfranko.com/jquery.selectBoxIt.js/css/jquery.selectBoxIt.css">
-	<link rel="stylesheet" href="libs/jquery-ui.theme.min.css">
 	<link rel="stylesheet" href="libs/reset.min.css">
 	<link rel="stylesheet" href="css/style.css">
 
@@ -462,31 +460,31 @@
 
 			<div class="packages-custom">
 				<form action="#" class="packages-form">
-					<select name="location[]" class="packages-form__select">
-						<option value="1" class="packages-form__select-item">1<i class="iconsss fas fa-map-marker-alt">1</i>11</option><!-- /.packages-form__select-item -->
+					<select name="location[]" class="packages-form__select packages-form__select-first">
+						<option value="Location" class="packages-form__select-item">Location</option><!-- /.packages-form__select-item -->
 						<option value="2" class="packages-form__select-item">2</option><!-- /.packages-form__select-item -->
 						<option value="3" class="packages-form__select-item">3</option><!-- /.packages-form__select-item -->
 						<option value="4" class="packages-form__select-item">4</option><!-- /.packages-form__select-item -->
 					</select><!-- /#.packages-form__select -->
-					<select name="in[]" class="packages-form__select">
-						<option value="1" class="packages-form__select-item">1</option><!-- /.packages-form__select-item -->
+					<select name="in[]" class="packages-form__select packages-form__select-second">
+						<option value="Check In" class="packages-form__select-item">Check In</option><!-- /.packages-form__select-item -->
 						<option value="2" class="packages-form__select-item">2</option><!-- /.packages-form__select-item -->
 						<option value="3" class="packages-form__select-item">3</option><!-- /.packages-form__select-item -->
 						<option value="4" class="packages-form__select-item">4</option><!-- /.packages-form__select-item -->
 					</select><!-- /#.packages-form__select -->
-					<select name="out[]" class="packages-form__select">
-						<option value="1" class="packages-form__select-item">1</option><!-- /.packages-form__select-item -->
+					<select name="out[]" class="packages-form__select packages-form__select-third">
+						<option value="Check Out" class="packages-form__select-item">Check Out</option><!-- /.packages-form__select-item -->
 						<option value="2" class="packages-form__select-item">2</option><!-- /.packages-form__select-item -->
 						<option value="3" class="packages-form__select-item">3</option><!-- /.packages-form__select-item -->
 						<option value="4" class="packages-form__select-item">4</option><!-- /.packages-form__select-item -->
 					</select><!-- /#.packages-form__select -->
-					<select name="people[]" class="packages-form__select">
-						<option value="1" class="packages-form__select-item">1</option><!-- /.packages-form__select-item -->
+					<select name="people[]" class="packages-form__select packages-form__select-fourth">
+						<option value="People" class="packages-form__select-item">People</option><!-- /.packages-form__select-item -->
 						<option value="2" class="packages-form__select-item">2</option><!-- /.packages-form__select-item -->
 						<option value="3" class="packages-form__select-item">3</option><!-- /.packages-form__select-item -->
 						<option value="4" class="packages-form__select-item">4</option><!-- /.packages-form__select-item -->
 					</select><!-- /#.packages-form__select -->
-					<button class="button">Book now</button><!-- /.button -->
+					<button class="button packages-form__button">Book now</button><!-- /.button -->
 				</form><!-- /.packages-form -->
 			</div><!-- /.packages-custom -->
 		</div><!-- /.container -->
@@ -495,8 +493,7 @@
 	 crossorigin="anonymous"></script>
 	<script>window.jQuery || document.write('<script src="../../../../assets/js/vendor/jquery.min.js"><\/script>')</script>
 	<script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-	<script src="http://gregfranko.com/jquery.selectBoxIt.js/js/jquery.selectBoxIt.min.js"></script>
+	<script src="libs/jquery.ikSelect.min.js"></script>
 	<script src="js/script.js"></script>
 </body>
 
