finished selects appearance

--- a/src/index.html
+++ b/src/index.html
@@ -461,10 +461,19 @@
 			<div class="packages-custom">
 				<form action="#" class="packages-form">
 					<select name="location[]" class="packages-form__select packages-form__select-first">
-						<option value="Location" class="packages-form__select-item">Location</option><!-- /.packages-form__select-item -->
-						<option value="2" class="packages-form__select-item">2</option><!-- /.packages-form__select-item -->
-						<option value="3" class="packages-form__select-item">3</option><!-- /.packages-form__select-item -->
-						<option value="4" class="packages-form__select-item">4</option><!-- /.packages-form__select-item -->
+						<option value="Location" class="packages-form__select-item select-item__first">Location</option><!-- /.packages-form__select-item -->
+						<option value="London" class="packages-form__select-item">London</option><!-- /.packages-form__select-item -->
+						<option value="Dubai" class="packages-form__select-item">Dubai</option><!-- /.packages-form__select-item -->
+						<option value="Bern" class="packages-form__select-item">Bern</option><!-- /.packages-form__select-item -->
+						<option value="Paris" class="packages-form__select-item">Paris</option><!-- /.packages-form__select-item -->
+						<option value="Singapore" class="packages-form__select-item">Singapore</option><!-- /.packages-form__select-item -->
+						<option value="New York" class="packages-form__select-item">New York</option><!-- /.packages-form__select-item -->
+						<option value="Seoul" class="packages-form__select-item">Seoul</option><!-- /.packages-form__select-item -->
+						<option value="Barcelona" class="packages-form__select-item">Barcelona</option><!-- /.packages-form__select-item -->
+						<option value="Prague" class="packages-form__select-item">Prague</option><!-- /.packages-form__select-item -->
+						<option value="Rome" class="packages-form__select-item">Rome</option><!-- /.packages-form__select-item -->
+						<option value="Shanghai" class="packages-form__select-item">Shanghai</option><!-- /.packages-form__select-item -->
+						<option value="Amsterdam" class="packages-form__select-item">Amsterdam</option><!-- /.packages-form__select-item -->
 					</select><!-- /#.packages-form__select -->
 					<select name="in[]" class="packages-form__select packages-form__select-second">
 						<option value="Check In" class="packages-form__select-item">Check In</option><!-- /.packages-form__select-item -->
